--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <meta http-equiv="Feature-Policy" content="geolocation 'none'; camera 'none' microphone ; 'none';">
 
     <link rel="icon" href="./icon/favicon_general.ico" type="image/x-icon">
-    <link rel="canonical" href="./index.html">
+    <link rel="canonical" href="https://github.com/mromram706/mromram706.github.io.git/index.html">
 
     <!--#1 Título de la página-->
     <title>Mi presentación</title>
